--- a/src/components/sideMenu.css
+++ b/src/components/sideMenu.css
@@ -2,7 +2,13 @@
     display: flex;
     flex-flow: column wrap;
     flex: 1;
-    border-radius: 10%;
+    margin-left: 1vw;
+    box-shadow: 0.1vw black;
+
+}
+
+.SideMenu-list:hover {
+    box-shadow: 0.5vw 0.5vw 0.5vw 0.5vw black;
 }
 
 .SideMenu-list {
@@ -10,8 +16,8 @@
     margin: 0;
     padding: 0;
     overflow: auto;
-    background-color: rgb(78, 104, 219);
-    border-radius: 0% 5% 5% 0%;
+    border-radius: 25px;
+    transition: box-shadow 0.5s;
 }
 
 .SideMenu-listitem {
@@ -21,29 +27,30 @@
     font-size: 1.1vw;
     padding-top: 1vw;
     padding-bottom: 0.2vw;
-    background-color: rgb(117, 117, 117);
-    color: white;
+    background-color: #e5e5e5;
     border-top: 0.1vw solid rgb(68, 68, 68);
 }
 
+
 a {
     text-decoration: none;
+    color: rgb(80, 80, 80);
+}
+
+a:hover {
     color: white;
 }
 
-.active {
-    color: black;
-}
 
 .SideMenu-listitem:hover {
-    background-color: rgb(82, 113, 253);
+    background-color: #5271FF;
 }
 
 .SideMenu-listheader {
     display: block;
     font-size: 1.2vw;
-    background-color: #5271fd;
-    color: white;
+    background-color: #5271FF;
+    color: #eeeeee;
     height: 1.8vw;
     text-align: center;
     padding-top: 0.5vw;
